fixes overflow issue with nav and search bars in mobile view

--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,9 @@ html, body {
   background-color: #ffffff;
 }
 .router-container {
+  position:  absolute;
+  top:  100px;
+  width:  100%;
   height: calc(100vh - 100px);
 }
 .about-page {
